<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>industrial_robot_client</name>
  <version>1.0.0</version>
  <description>the industrial_robot_client package</description>
  <maintainer email="ivo.dekker@kuleuven.be">ivo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>simple_message</depend>
  <depend>industrial_msgs</depend>
  <depend>industrial_utils</depend>
  <depend>rcpputils</depend>
  <depend>ros2launch</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
